force-app/main/default/objects/Linked_Case__c/Linked_Case__c.object-meta.xml
<CustomObject>
    <description>Object is used to show cases linked by the Employer having an open cases across departments. This will show Cases and registrations.</description>
    <label>Linked Case</label>
    <nameField>
        <displayFormat>LC - {00000}</displayFormat>
        <label>Linked Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>