force-app/main/default/objects/Linked_Case__c/fields/Child_Case__c.field-meta.xml
<CustomField>
    <fullName>Child_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for the child case management record</description>
    <label>Child Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Linked Cases (Child Case)</relationshipLabel>
    <relationshipName>Linked_Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>