force-app/main/default/objects/Linked_Case__c/fields/Child_Case_Employer__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Employer__c</fullName>
    <formula>Child_Case__r.Employer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Case Employer</label>
    <type>Text</type>
</CustomField>