force-app/main/default/objects/Linked_Case__c/fields/Child_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Number__c</fullName>
    <formula>Child_Case__r.Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Case Number</label>
    <type>Text</type>
</CustomField>