force-app/main/default/objects/Linked_Case__c/fields/Child_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Record_Type__c</fullName>
    <formula>Child_Case__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Case Record Type</label>
    <type>Text</type>
</CustomField>