force-app/main/default/objects/Linked_Case__c/fields/Child_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Status__c</fullName>
    <formula>TEXT( Child_Case__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Case Status</label>
    <type>Text</type>
</CustomField>