force-app/main/default/objects/Linked_Case__c/fields/CM_Case__c.field-meta.xml
<CustomField>
    <fullName>CM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CM Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Linked Cases (CM Case)</relationshipLabel>
    <relationshipName>Linked_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>