force-app/main/default/objects/Linked_Case__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Linked Cases</relationshipLabel>
    <relationshipName>Linked_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>