force-app/main/default/objects/Linked_Case__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for the parent linked case.</description>
    <label>Parent Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Linked Cases</relationshipLabel>
    <relationshipName>Linked_Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>