force-app/main/default/objects/Linked_Case__c/fields/Parent_Case_Assigned_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Assigned_Deputy__c</fullName>
    <formula>Parent_Case__r.Assigned_Deputy_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Assigned Deputy</label>
    <type>Text</type>
</CustomField>