force-app/main/default/objects/Linked_Case__c/fields/Parent_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Record_Type__c</fullName>
    <formula>Parent_Case__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Record Type</label>
    <type>Text</type>
</CustomField>