force-app/main/default/objects/Linked_Case__c/fields/Parent_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Status__c</fullName>
    <formula>TEXT(Parent_Case__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Status</label>
    <type>Text</type>
</CustomField>